@@ -1,4 +1,4 @@
-CONTRIBUTORS
+CONTRIBUTORS. See ChangeLog also
 
 - Warwick Allison <warwick@troll.no>
   - 16 color SGR codes (xterm-83)
