@@ -1,3 +1,5 @@
+30 Jan 1998 Kyle Haight <khaight@netcom.com>
+- Solaris 2.6 adjustment
 30 Jan 1998 Warwick Allison <warwick@troll.no>
 - character classes (removing word_characters code)
 - "word" selection based on character classes
